--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
         font-weight: 500;
       "
     >
-      Seleccione género:
+      Seleccione el Género de la Película:
     </p>
     <mat-form-field class="input-child dd" appearance="outline" color="accent">
       <mat-select
@@ -76,7 +76,7 @@
         cdkAutosizeMinRows="1"
         cdkAutosizeMaxRows="5"
         style="color: #80848e"
-        placeholder="Buscar por Descripcion"
+        placeholder="Buscar por Descripción"
         [(ngModel)]="filtros.description"
         (ngModelChange)="filter()"
       ></textarea>
